--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,13 @@ input:focus {
   height: 1.7rem;
 }
 
+.width-100 {
+  width: 99%;
+}
+
 .ul {
   width: 70%;
+  max-width: 700px;
   padding: 0;
   margin: 0 auto;
 }
@@ -42,9 +47,17 @@ input:focus {
 
 .form {
   width: 80%;
+  max-width: 900px;
   margin: 0 auto;
   display: flex;
   justify-content: center;
+}
+
+.form__login {
+  border: 1px solid #333;
+  max-width: 300px;
+  flex-direction: column;
+  padding: 25px;
 }
 
 .checkbox {
