--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,16 @@ input:focus {
   font-size: 1rem;
 }
 
+button:disabled,
+button[disabled] {
+  opacity: 0.3;
+  cursor: default;
+}
+
+button:hover:enabled {
+  background: rgba(0, 0, 0, 0.05);
+}
+
 .button__content {
   display: flex;
   align-items: center;
@@ -102,3 +112,7 @@ input:focus {
   margin: 0.3rem;
   font-size: 0.8rem;
 }
+/* 
+.disabled {
+
+} */
