Feat: Header Navigation 구현

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@ input:focus {
   width: 99%;
 }
 
+header ul {
+  display: flex;
+  justify-content: space-evenly;
+  width: 300px;
+  align-items: center;
+}
+
 .ul {
   width: 70%;
   max-width: 700px;
@@ -34,8 +41,20 @@ input:focus {
   opacity: 0.5;
 }
 
-.li {
+ul {
+  padding: 0;
+}
+
+li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+.li {
   padding: 10px;
   display: flex;
   justify-content: space-between;
